--- a/css/style.css
+++ b/css/style.css
@@ -30,8 +30,19 @@ body {
 }
 
 .column {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: calc(100% / 6);
   height: 100%;
   padding: 10px;
   border: 1px solid red;
+}
+
+.green {
+  background-color: green;
+}
+
+.yellow {
+  background-color: yellow;
 }
